# chatbot

./: README.md  pyproject.toml
chatbot/: main.py  ui.py
chatbot/configs/: embedding_model_config.py  ollama_model_config.py
chatbot/routers/: chat_response_routers.py
chatbot/schema/: process_fastapi_request.py  process_langraph_request.py
chatbot/services/: chat_services.py  embedding_services.py
examples/: chatbot_examples.py  embedding_creation_examples.py
faiss_index/: index.faiss  index.pkl
