[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.13",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.10",
    "pypdf>=5.6.1",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.46.1",
    "uvicorn>=0.34.3",
]
